# rsnek

./: .arcconfig  .bumpversion.cfg  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Makefile  Milestones.md  NOTES.org  README  REAME.md  buildspec.yml  inttest.py  perf.md
python_ast/: Cargo.toml
python_ast/benches/: lexer.rs
python_ast/src/: doc.rs  fmt.rs  lexer.rs  lib.rs  parser.rs
python_ast/src/macros/: mod.rs  parser.rs
python_ast/src/preprocessor/: blockscope.rs  mod.rs  traits.rs
rsnek/: Cargo.toml  T59_01_recursion_limits.py  T59_02_call_nested.py  T95_experiment_01.py  build.rs  define_and_call.py  func.py  func.py.compiled  funcargs.py.compiled  milestone_v040.py  scoped_test_2.py.compiled
rsnek/benches/: bench_compiler.rs  bench_interpreter.rs
rsnek/src/: lib.rs  macros.rs  main.rs
rsnek/src/api/: method.rs  mod.rs  result.rs  rtobject.rs  selfref.rs  typing.rs
rsnek/src/compiler/: compiler.rs  fmt.rs  graph.rs  mod.rs  scope.rs  symbol.rs
rsnek/src/modules/: mod.rs  precondition.rs
rsnek/src/modules/builtins/: all.rs  and.rs  any.rs  globals.rs  int.rs  len.rs  list.rs  mod.rs  or.rs  print.rs  tuple.rs
rsnek/src/objects/: bytes.rs  complex.rs  float.rs  frame.rs  iterator.rs  list.rs  method.rs  mod.rs  module.rs  object.rs  set.rs  tuple.rs
rsnek/src/resources/strings/: banner.in  build.cfg.in  license.in  mod.rs  prompt.in
rsnek/src/runtime/: interpreter.rs  main.rs  mod.rs  opcode.rs
rsnek/src/strings/: banner.rsrc.xml  build.cfg.in  mod.rs  version.in
rsnek/src/system/: primitives.rs  rc.rs  thread.rs
rsnek/tests/: run_python_file.rs  test.py.compiled
rsnek/tests/src-python/: milestone_v040.py  scoped_test_2.py
rsnek_ast/: Cargo.toml
rsnek_ast/src/: ast.rs  lib.rs  parser.rs  token.rs  tokenizer.rs
rsnek_compile/: Cargo.toml  Grammar.txt  rust_python_compiler.test1.txt
rsnek_compile/benches/: lexer.rs
rsnek_compile/benches/python3.6/: .gitattributes
rsnek_compile/src/: ast.rs  blockbuf.rs  compiler.rs  fmt.rs  keyword.rs  lexer.rs  lib.rs  parser.rs  slice.rs  token.rs  tokenizer.rs  util.rs
rsnek_compile/src/macros/: mod.rs  parser.rs  redefs_nom.rs  redefs_nom_method.rs
rsnek_compile/src/preprocessor/: blockscope.rs  chainedkeyword.rs  expression.rs  mod.rs
rsnek_compile/src/traits/: mod.rs  redefs_nom.rs
rsnek_compile_macros/: Cargo.toml
rsnek_compile_macros/src/: lib.rs
rsnek_proc_macros/: Cargo.toml
rsnek_proc_macros/src/: lib.rs
rsnek_runtime/: Cargo.toml  build.rs
rsnek_runtime/src/: compiler.rs  error.rs  lib.rs  macros.rs  opcode.rs  result.rs  scope.rs  symbol.rs  traits.rs
rsnek_runtime/src/api/: error.rs  method.rs  mod.rs  result.rs  rtobject.rs  selfref.rs  typing.rs
rsnek_runtime/src/ast/: mod.rs
rsnek_runtime/src/builtin/: all.rs  and.rs  any.rs  globals.rs  int.rs  len.rs  list.rs  mod.rs  or.rs  precondition.rs  print.rs  str.rs  tuple.rs  typefn.rs
rsnek_runtime/src/compiler/: compiler.rs  scope.rs  symbol.rs
rsnek_runtime/src/modules/: mod.rs  precondition.rs
rsnek_runtime/src/modules/builtins/: all.rs  and.rs  any.rs  globals.rs  int.rs  len.rs  list.rs  mod.rs  or.rs  print.rs  str.rs  tuple.rs  typefn.rs  types.rs
rsnek_runtime/src/object/: attribute.rs  coroutine.rs  method.rs  mod.rs  operator.rs  rtobject.rs  selfref.rs  typing.rs
rsnek_runtime/src/objects/: boolean.rs  builtin.rs  bytes.rs  code.rs  complex.rs  dictionary.rs  float.rs  frame.rs  frozenset.rs  integer.rs  iterator.rs  list.rs  method.rs  mod.rs  module.rs  native.rs  none.rs  number.rs  object.rs  pytype.rs  set.rs  string.rs  tuple.rs
rsnek_runtime/src/objects/collection/: mod.rs  sequence.rs
rsnek_runtime/src/resource/strings/: README.md  about.in  authors.in  banner2.in  build.cfg.in  mod.rs  program.in  prompt.rsrc.xml
rsnek_runtime/src/resources/: mod.rs
rsnek_runtime/src/resources/strings/: mod.rs
rsnek_runtime/src/runtime/: config.rs  interpreter.rs  main.rs  mod.rs  runtime.rs
rsnek_runtime/src/system/: exit.rs  mod.rs  primitives.rs  rc.rs
rsnek_runtime/src/typedef/: boolean.rs  builtin.rs  bytes.rs  code.rs  collection.rs  complex.rs  dictionary.rs  float.rs  frame.rs  frozenset.rs  integer.rs  iterator.rs  list.rs  method.rs  mod.rs  module.rs  native.rs  none.rs  number.rs  object.rs  objectref.rs  pytype.rs  set.rs  string.rs  tuple.rs
rsnek_runtime/src/typedef/collection/: sequence.rs
rsnek_runtime/tests/src-python/: funcargs.py
src/: arena.rs  builtin.rs  error.rs  float.rs  heap.rs  instruction.rs  integer.rs  lib.rs  log.rs  macro.rs  macros.rs  object.rs  opcode.rs  parser.rs  result.rs  runtime.rs  snektype.rs  string.rs  traits.rs
src/builtin/: len.rs  mod.rs  precondition.rs  type.rs
src/object/: api.rs  attribute.rs  binop.rs  collection.rs  compare.rs  context.rs  coroutine.rs  descriptor.rs  hashed.rs  identity.rs  method.rs  mod.rs  model.rs  number.rs  operator.rs  selfref.rs  typing.rs
src/runtime/: interpreter.rs
src/typedef/: boolean.rs  builtin.rs  complex.rs  dictionary.rs  float.rs  frozenset.rs  integer.rs  list.rs  macros.rs  method.rs  mod.rs  module.rs  native.rs  none.rs  object.rs  objectref.rs  pytype.rs  set.rs  singleton.rs  string.rs  tuple.rs  type.rs
tests/python/: e0001_hello_world.py  e0002_add_x_plus_y.py  e0003_add_and_print.py
tools/: exec-on-inotify.sh
tools/aws-cli-sugar/: pipeline-status.sh
tools/gen-macro-redefs/: makemacros.py  requirements.txt  {{type_prefix}}_macros.rs  {{type_prefix}}_method_macros.rs  {{type_prefix}}_parser_binop_macros.rs
tools/gen-macro-redefs/codegen/: _method_macros.rs  tk_macros.rs  tk_parser_binop_macros.rs
tools/maniphest/: maketasks.py
