[package]
name = "python_ast"
version = "0.8.0"
authors = ["Dillon Hicks <dillon@dillonhicks.io>"]

include = [
  "Cargo.toml",
  "src/*.rs",
  "tests/*.rs"
]

[lib]
name = "python_ast"


[dependencies]
slog = {version = "2", features=["max_level_trace", "release_max_level_info"]}
slog-scope = "^3.0.0"


time = "*"
num = "*"
itertools = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
serde_bytes = "*"


[dependencies.nom]
version = "^2.2"
features = ["verbose-errors"]
