[package]
name = "rsnek"
version = "0.7.2"
authors = ["Dillon Hicks <dillon@dillonhicks.io>"]
build = "build.rs"

[features]
default = ["rsnek_multithreaded"]
rsnek_multithreaded = []

[dependencies]
slog = {version = "2", features=["max_level_trace", "release_max_level_info"]}
slog-async = "2.0.1"
slog-term = "~2.0.0-4"
slog-scope = "^3.0.0"
slog-stream = "^1.2.0"
slog-bunyan = { git = "https://github.com/slog-rs/bunyan.git", branch = "master"}


clap = "*"
python_ast = { version = "*", path = "../python_ast" }

[build-dependencies]
rustc_version = "*"

[dependencies.rsnek_runtime]
version = "*"
path = "../rsnek_runtime"
