[package]
name = "rsnek"
version = "0.8.0"
authors = ["Dillon Hicks <dillon@dillonhicks.io>"]
build = "build.rs"

[lib]
name = "rsnek"

[[bin]]
path = "src/bin/rsnek.rs"
name = "rsnek"
doc = false

[features]
default = []
rsnek_multithreaded = []

[build-dependencies]
rustc_version = "*"

[dependencies]
python_ast = {path = "../python_ast" }

bincode = "^0.8.0"
clap = "*"


itertools = "^0.6.0"

# BigInt, BigComplex, and Num Traits
num = "^0.1.37"
num-bigint = "^0.1.37"

# CLI Readline Support for Interactive mode
rustyline = { git = "https://github.com/kkawakam/rustyline", branch = "master"}

# Serialization
serde = "^1.0.0"
serde_derive = "^1.0.0"

slog = {version = "2", features=["max_level_trace", "release_max_level_info"]}
slog-async = "2.0.1"
slog-term = "~2.0.0-4"
slog-scope = "^3.0.0"
slog-stream = "^1.2.0"

# Userland ctx swtiches for nix platforms
[dependencies.fringe]
version = "^1.2.1"
no-default-features = true