[package]
name = "rsnek_ast"
version = "0.0.1"
authors = ["Dillon Hicks <dillon@dillonhicks.io>"]

[lib]
name = "rsnek_ast"

[features]
const_fn = []

[dependencies]
rsnek_proc_macros =  { version = "*", path = "../rsnek_proc_macros" }
num = "*"
itertools = "*"
regex = "0.2"
lazy_static = "*"
serde = "*"
serde_yaml = "*"
serde_json = "*"
serde_derive = "*"
serde_bytes = "*"
serde-pickle = "*"

[dependencies.nom]
version = "^2.2"
features = ["regexp", "regexp_macros", "verbose-errors"]
