[package]
name = "rsnek_compile"
version = "0.0.1"
authors = ["Dillon Hicks <dillon@dillonhicks.io>"]

include = [
  "Cargo.toml",
  "src/*.rs",
  "tests/*.rs"
]

[lib]
name = "rsnek_compile"

[features]
const_fn = []


[dependencies]
log = "^0.3.7"
log4rs = "^0.6.3"

encoding = "*"
time = "*"
num = "*"
itertools = "*"
serde = "*"
serde_yaml = "*"
serde_json = "*"
serde_derive = "*"
serde_bytes = "*"
serde-pickle = "*"
bincode = "*"

[dependencies.nom]
version = "^2.2"
features = ["verbose-errors"]
