[package]
name = "rsnek_compile"
version = "0.7.1"
authors = ["Dillon Hicks <dillon@dillonhicks.io>"]

include = [
  "Cargo.toml",
  "src/*.rs",
  "tests/*.rs"
]

[lib]
name = "rsnek_compile"

[features]
const_fn = []


[dependencies]
slog = {version = "2", features=["max_level_trace", "release_max_level_info"]}
slog-scope = "^3.0.0"


time = "*"
num = "*"
itertools = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
serde_bytes = "*"


[dependencies.nom]
version = "^2.2"
features = ["verbose-errors"]
