[package]
name = "rsnek_runtime"
version = "0.2.0"
authors = ["Dillon Hicks <dillon@dillonhicks.io>"]

[lib]
name = "rsnek_runtime"

[features]
fn_traits = []

[dependencies]
log4rs = "^0.6.3"
log = "^0.3.7"
itertools = "^0.6.0"

# BigInt, BigComplex, and Num Traits
num = "^0.1.37"

# Userland ctx swtiches for nix platforms
fringe = "^1.2.1"

# Serialization
serde = "^1.0.0"
serde_derive = "^1.0.0"

# CLI Readline Support for Interactive mode
rustyline = { git = "https://github.com/kkawakam/rustyline", branch = "master"}


rsnek_compile = {path = "../rsnek_compile" }
