[package]
name = "rsnek_runtime"
version = "0.7.2"
authors = ["Dillon Hicks <dillon@dillonhicks.io>"]

[lib]
name = "rsnek_runtime"

[features]
default = []
rsnek_multithreaded = []


[dependencies]
slog = {version = "2", features=["max_level_trace", "release_max_level_error"]}
slog-scope = "^3.0.0"

itertools = "^0.6.0"

# BigInt, BigComplex, and Num Traits
num = "^0.1.37"
num-bigint = "^0.1.37"

# Userland ctx swtiches for nix platforms
fringe = "^1.2.1"

# Serialization
serde = "^1.0.0"
serde_derive = "^1.0.0"

# CLI Readline Support for Interactive mode
rustyline = { git = "https://github.com/kkawakam/rustyline", branch = "master"}


python_ast = {path = "../python_ast" }
